--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,66 @@
 .App {
   text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+button {
+  margin: 10px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+table {
+  background-color: rgb(198, 194, 194);
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+}
+
+th {
+  display: flex;
+  justify-content: space-around;
+}
+
+table tbody tr td {
+  border: 1px solid;
+  width: 20px;
+  height: 20px;
+}
+
+.flagged {
+  /* background-image: url(/src/16px-Minesweeper_flag.svg.png); */
+  /* background-position: -16px -39px; */
+  width: 16px;
+  /* height: 16px; */
+  background-color: red;
+}
+
+.gameOver{
+  font-size: large;
+  color: red;
+  font-weight: bold;
+}
+
+.youWon{
+  font-size: large;
+  color: green;
+  font-weight: bold;
+}
+
+.opened {
+  background-color: white;
 }
 
 .App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+  background-color: #ced1d6;
+  min-height: 5vh;
+  width: 50%;
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
   color: white;
 }
 
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
